ft(admin): change mentor to user [Finishes #168191216]
